--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,107 @@
-body {
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+body {
+  line-height: 1;
+  font-family: sans-serif;
+}
+ol, ul {
+  list-style: none;
+}
+blockquote, q {
+  quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/*end reset*/
+
+.app {
+  margin: 50px;
+  font: 14px sans-serif;
 }
+
+
+
+.error {
+  color: #FF0000;
+}
+
+.nav{
+  width: 400px;
+  display: flex;
+  margin: 10px 10px;
+  justify-content: space-around;
+  
+}
+.nav>*{
+  background-color: aqua;
+  border:solid 1px;
+  border-color:black;
+  text-decoration: unset;
+
+}
+.nav>*:hover{
+  background-color: #6d8cb0;
+
+}
+
+.soc{
+  width: 500px;
+  display: flex;
+  margin: 10px 10px;
+  justify-content: space-around;
+}
+.soc_item,.soc_item a{
+  display: flex;
+
+}
+
+.label{
+  border-radius: 2rem;
+}
+.label:hover{
+  transform: scale(2,2);
+  transition: .5s;
+}
+
+.telegram{background: url("/soc2.png"); width: 40px; height: 40px; zoom: 0.5; background-position: 160px 85px;}
+.twitter{background: url("/soc2.png"); width: 40px; height: 40px; zoom: 0.5; background-position: 120px 200px;}
+.vk{background: url("/soc2.png"); width: 40px; height: 40px; zoom: 0.5; background-position: 200px 200px;}
+.twitch{background: url("/soc2.png"); width: 40px; height: 40px; zoom: 0.5; background-position: 200px 200px;}
+.youtube{background: url("/soc2.png"); width: 40px; height: 40px; zoom: 0.5; background-position: 120px 160px;}
+.web{background: url("/gl.png");  width: 40px; height: 40px; zoom: 0.4; background-size: contain;}
